--- a/PortfolioShared/PortfolioShared.csproj
+++ b/PortfolioShared/PortfolioShared.csproj
@@ -9,6 +9,12 @@
 
   <ItemGroup>
     <Folder Include="Authentication\" />
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Serilog" Version="2.11.0" />
+    <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
   </ItemGroup>
 
 </Project>
